--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,37 @@
 # Logs
 logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# *.log
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
 
 # dependencies
 node_modules
-.pnp
-.pnp.js
+# .pnp
+# .pnp.js
 
 # testing
-coverage
+# coverage
 
 # production
 .next
-.swc
-_static
-out
-dist
-build
+# .swc
+# _static
+# out
+# dist
+# build
 
-# environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# # environment variables
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
-# misc
-.DS_Store
-.vercel
-.netlify
-.vscode
-tsconfig.tsbuildinfo
-.ncurc.js
+# # misc
+# .DS_Store
+# .vercel
+# .netlify
+# .vscode
+# tsconfig.tsbuildinfo
+# .ncurc.js
